Supercluster/Cluster01/WebServer002/Namespace.yaml
############################
# @author Elias De Hondt   #
# @see https://eliasdh.com #
# @since 24/11/2024        #
############################
---
apiVersion: v1
kind: Namespace
metadata:
  name: webserver002
  labels:
    name: webserver002
    app: webserver002
    owner: Zizis
    environment: production
  annotations:
    description: This namespace is used for the webserver002 application.
    contact: info@eliasdh.com
---
