Supercluster/Cluster01/WebServer002/Deployment.yaml
############################
# @author EliasDH Team     #
# @see https://eliasdh.com #
# @since 01/01/2025        #
############################
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver002-deployment
  namespace: webserver002
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webserver002
  template:
    metadata:
      labels:
        app: webserver002
    spec:
      containers:
        - name: webserver002-container
          image: "ghcr.io/eliasdh-com/displaylevelupbe-frontend:latest"
          ports:
          - containerPort: 8080
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
---
