Supercluster/Cluster01/WebServer002/Service.yaml
############################
# @author EliasDH Team     #
# @see https://eliasdh.com #
# @since 01/01/2025        #
############################
---
apiVersion: v1
kind: Service
metadata:
  name: webserver002-frontend-service
  namespace: webserver002
spec:
  selector:
    app: webserver002-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: webserver002-backend-service
  namespace: webserver002
spec:
  selector:
    app: webserver002-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
---
