Supercluster/Cluster01/WebServer002/Ingress.yaml
############################
# @author EliasDH Team     #
# @see https://eliasdh.com #
# @since 01/01/2025        #
############################
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webserver002-ingress
  namespace: webserver002
  annotations:
    cert-manager.io/issuer: "webserver002-letsencrypt-issuer"
    nginx.ingress.kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/ssl-redirect: "true" # Redirect HTTP to HTTPS
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - display.levelup.be
      secretName: displaylevelupbe-tls
  rules:
    - host: display.levelup.be
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webserver002-frontend-service
                port:
                  number: 80
    - host: display.levelup.be
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: webserver002-backend-service
                port:
                  number: 80
---
